tl-team/web-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tl-equipment-webapi
spec:
  type: ClusterIP
  selector:
    pod: tl-equipment-webapi-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
