tl-team/web-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tl-equipment-webapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: wac-hospital
  rules:
  - http:
      paths:
      - path: /tl-equipment-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tl-equipment-webapi
            port:
              name: webapi-s-port
